--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Abraham
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Valley.Valley
-GameDefaultMap=/Game/Maps/Valley.Valley
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/EternalTemple/ETGameplay/ET_FPGameMode.ET_FPGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/AbrahamGameInstance.AbrahamGameInstance_C
 
